Work on auto setup and resume after ADL fix
git-svn-id: file:///Users/wmohler/Documents/CytoSHOWsvnClone/svn_load_compat@21885 d59c7341-666b-7e48-8bb3-2014e8cfb900